# zlib-ng

./: CMakeLists.txt  compile.sh  configure  functable.c  meson.build  meson_options.txt  zconf-ng.h
.github/workflows/: pkgcheck.yml
meson/: generate-cmakein.py  run-and-redirect.py
test/: pkgcheck.sh  zlib-1.2.11-x86_64-linux-gnu.abi
win32/: Makefile.msc
